ikubernetes_1.15.7/sys-kubernetes/grafana/grafana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoring-grafana
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:5.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /var
          name: grafana-storage
      volumes:
      - name: grafana-storage
        emptyDir: {}
      tolerations:
      - key: node-role.kubernetes.io/master
        value: ""
        effect: NoSchedule
      nodeSelector:
        node-role.kubernetes.io/master: ""
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/tcp-probe: 'true'
    prometheus.io/tcp-probe-port: '80'
  labels:
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    #kubernetes.io/cluster-service: 'true'
    #kubernetes.io/name: monitoring-grafana
spec:
  type: NodePort
  clusterIP: 10.96.66.66
  selector:
    k8s-app: grafana
  ports:
    - name: grafana
      port: 3000
      nodePort: 30088


#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: monitoring-grafana
#  namespace: kube-system
#spec:
#  rules:
#  - host: grafana.ik8s.com
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: monitoring-grafana
#          servicePort: grafana
